# tree-set

./: .gitignore  CHANGELOG.md.save2  README.md  package.yaml  report.html  tree-set.cabal  tree-set.cabal.save0  tree-set.cabal.save1  tree-set.cabal.save2  tree-set.cabal.save3  tree-set.cabal.save4
.github/workflows/: haskell.yml
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
dist-newstyle/packagedb/ghc-8.0.2/: package.cache  tree-set-0.1.0.0-inplace.conf
src/: Set.hs
test/: PropertyTest.hs  SetTest.hs
