cabal-version:      2.4
name:               tree-set
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Roman Glinskikh
maintainer:         glinskikh.roman@yandex.ru

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable tree-set
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.16.4.0
    hs-source-dirs:   app
    default-language: Haskell2010

library
  exposed-modules:
      Lib
      Set
  other-modules:
      Paths_tree_set
  hs-source-dirs:
      src
  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints
  build-depends:
      base >=4.7 && <5
  default-language: Haskell2010

executable tree-set-exe
  main-is: Main.hs
  other-modules:
      Paths_tree_set
  hs-source-dirs:
      app
  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
  build-depends:
    base >=4.7 && <5
    , tree-set
  default-language: Haskell2010

test-suite tree-set-test
  type: exitcode-stdio-1.0
  main-is: SetTest.hs
  other-modules:
      Paths_tree_set
  hs-source-dirs:
      test
  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      HUnit
    , base >=4.7 && <5
    , tree-set
  default-language: Haskell2010
